# py_secure_shell_automator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  test.yml
py_secure_shell_automator/: __init__.py  py_secure_shell_automator.py
py_secure_shell_automator/base_ssh/: __init__.py  base_ssh.py  exceptions.py
py_secure_shell_automator/files_operations/: __init__.py  exceptions.py  files_operations.py
py_secure_shell_automator/get_system_info/: __init__.py  exceptions.py  get_system_info.py
py_secure_shell_automator/models/: __init__.py  executions_results.py
py_secure_shell_automator/process_operations/: exceptions.py  processes_operations.py
py_secure_shell_automator/processes_operations/: __init__.py  exceptions.py  processes_operations.py
py_secure_shell_automator/user_operations/: __init__.py  exceptions.py  user_operations.py
scripts/: update_readme.py
tests/: __init__.py  base_ssh_test.py  files_operations_test.py  get_system_info_test.py  process_operations_test.py  update_readme_test.py  user_operations_test.py
tests/data/: file_test1.txt  file_test2.txt
